# 3D-Descriptor-For-Object-Recognition

./: CMakeLists.txt  README.md  main.cpp  main.hpp
pcd/: frame_00001.pcd  frame_00002.pcd
src/: CMakeLists.txt  common.h  cudaCommon.h  cudaGrid.h  cuda_common.h  descriptor.cu  descriptor.h  detection.cu  detection.h  grid.cu  grid.h  grouping.cu  grouping.h  kdtree.cpp  kdtree.hpp  sample.cu  sample.h  search.cu  search.h  shot.cu  shot.h  shot_lrf.cu  shot_lrf.h
util/: CMakeLists.txt  utilityCore.cpp  utilityCore.hpp
